--- a/wanderlust/package.json
+++ b/wanderlust/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "axios-progress-bar": "^1.2.0",
     "mdbreact": "./mdbreact",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
