--- a/wanderlust/package.json
+++ b/wanderlust/package.json
@@ -10,6 +10,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
+    "react-redux-firebase": "^3.5.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.4.1",
     "redux": "^4.0.1",
