--- a/wanderlust/package.json
+++ b/wanderlust/package.json
@@ -9,6 +9,7 @@
     "mdbreact": "./mdbreact",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-number-format": "^4.4.1",
     "react-redux": "^7.1.0",
     "react-redux-firebase": "^3.5.1",
     "react-router-dom": "^4.3.1",
