--- a/wanderlust/package.json
+++ b/wanderlust/package.json
@@ -9,6 +9,9 @@
     "mdbreact": "./mdbreact",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-geocode": "^0.2.1",
+    "react-google-autocomplete": "^1.2.6",
+    "react-google-maps": "^9.4.5",
     "react-number-format": "^4.4.1",
     "react-redux": "^7.1.0",
     "react-redux-firebase": "^3.5.1",
