--- a/wanderlust/package.json
+++ b/wanderlust/package.json
@@ -1,17 +1,18 @@
 {
   "name": "wanderlust",
-  "version": "0.1.0",
+  "version": "1.1.0",
   "private": true,
   "dependencies": {
+    "@react-google-maps/api": "^1.9.7",
     "axios": "^0.19.0",
     "axios-progress-bar": "^1.2.0",
     "firebase": "^7.15.0",
     "mdbreact": "./mdbreact",
     "react": "^16.8.6",
+    "react-cool-onclickoutside": "^1.5.3",
     "react-dom": "^16.8.6",
     "react-geocode": "^0.2.1",
     "react-google-autocomplete": "^1.2.6",
-    "react-google-maps": "^9.4.5",
     "react-number-format": "^4.4.1",
     "react-redux": "^7.1.0",
     "react-redux-firebase": "^3.5.1",
@@ -19,7 +20,8 @@
     "react-scripts": "^3.4.1",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "use-places-autocomplete": "^1.3.7"
   },
   "scripts": {
     "start": "react-scripts start",
